bug squashing

--- a/src/app/beast-view/beast-view.component.css
+++ b/src/app/beast-view/beast-view.component.css
@@ -300,7 +300,7 @@ mat-toolbar {
     text-align: center;
     width: 60px;
     left: 45px;
-    top: 97px;
+    top: 91px;
 }
 
 .parry {
