--- a/src/app/quick-view/quick-view-drawer.component.css
+++ b/src/app/quick-view/quick-view-drawer.component.css
@@ -196,7 +196,7 @@
     text-align: center;
     width: 60px;
     left: 45px;
-    top: 97px;
+    top: 91px;
     line-height: normal;
 }
 
