--- a/src/app/search-results/search-results.component.css
+++ b/src/app/search-results/search-results.component.css
@@ -21,7 +21,6 @@ mat-card {
 
 img {
     width: 150px;
-    height: 100%;
     margin-right: 10px;
     border-radius: 5px;
 }
@@ -77,7 +76,7 @@ img {
     }
 
     .img-shell {
-        height: 250px;
+        max-height: 250px;
         width: 250px;
         overflow: hidden;
         border-radius: 5px;
@@ -85,6 +84,7 @@ img {
 
     img {
         width: 100%;
+        max-height: 250px;
         margin: 0;
         object-fit: cover;
         object-position: top;
